# rawaccel

./: .gitignore  ReadMe.md
common/: rawaccel-version.h
linux/: CMakeLists.txt  handoff.md
linux/daemon/: CMakeLists.txt  DeviceManager.cpp  DeviceManager.hpp  IpcServer.cpp  IpcServer.hpp  MouseDevice.cpp  MouseDevice.hpp  SettingsLoader.cpp  SettingsLoader.hpp  VirtualMouse.cpp  VirtualMouse.hpp  main.cpp
linux/gui/: AccelGUI.cpp  AccelGUI.hpp  AccelTypePanel.cpp  AccelTypePanel.hpp  CMakeLists.txt  Calculator.cpp  Calculator.hpp  IpcClient.cpp  IpcClient.hpp  MainWindow.cpp  MainWindow.hpp  SettingsManager.cpp  SettingsManager.hpp  main.cpp
linux/gui/Charts/: AccelCharts.cpp  AccelCharts.hpp  ChartXY.cpp  ChartXY.hpp
linux/gui/Layouts/: LayoutBase.hpp
linux/gui/Options/: LockableOption.cpp  LockableOption.hpp  LutEditor.cpp  LutEditor.hpp  OptionWidget.cpp  OptionWidget.hpp
linux/install/: install-binary.sh  install.sh  rawaccel.service
linux/shared/: compat.hpp  ipc_protocol.hpp
